Add auto-generated output path and translate comments to English
- Output path is now optional; auto-generated from env file (.env → -storage.json)
- Backward compatible: explicit output path still supported as second argument
- Translate JSDoc comments to English
- Update package.json description to English

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "playwright-storage-state",
   "version": "1.0.0",
-  "description": "Playwright MCP 用 Splunk Storage State 生成ツール",
+  "description": "Playwright Storage State generator for Splunk",
   "main": "generate-storage-state.js",
   "license": "Apache-2.0",
   "engines": {
